--- a/src/components/Countries/styles.scss
+++ b/src/components/Countries/styles.scss
@@ -1,22 +1,33 @@
-.container {
-  background-color: #f5f5f7;
+$palette: (
+  primary: #440047,
+  accent: #e11d74,
+  secondary: #91d18b,
+  background: #e9e9e9
+);
 
-  .container__header {
+.container {
+  background-color: map-get($palette, "background");
+
+  &__header {
     height: 100px;
     background-color: white;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+
+    &Logo {
+      width: 200px;
+      margin: 16px 24px 16px 0;
+      float: left;
+    }
   }
 
   .container__countries {
     margin: 24px 16px 24px;
   }
-
-  .header__logo {
-    width: 200px;
-    margin: 16px 24px 16px 0;
-    float: left;
-  }
+}
+.CountryDetailsContainer {
+  height: 80vh;
+  background-color: #fff;
 }
