--- a/src/components/Countries/styles.scss
+++ b/src/components/Countries/styles.scss
@@ -1,12 +1,5 @@
-$palette: (
-  primary: #440047,
-  accent: #e11d74,
-  secondary: #91d18b,
-  background: #e9e9e9
-);
-
 .container {
-  background-color: map-get($palette, "background");
+  background-color: white;
 
   &__header {
     height: 100px;
@@ -23,11 +16,40 @@ $palette: (
     }
   }
 
-  .container__countries {
+  &__countries {
     margin: 24px 16px 24px;
   }
+
+  &__footer {
+    background-color: #26272b;
+    color: #96a2b2;
+
+    &--icons {
+      padding-left: 0;
+      margin-bottom: 0;
+      list-style: none;
+      display: flex;
+      justify-content: space-evenly;
+
+      li {
+        display: inline-block;
+      }
+    }
+  }
 }
+
 .CountryDetailsContainer {
   height: 80vh;
-  background-color: #fff;
+  background-color: white;
+  display: flex;
+  align-items: center;
+}
+
+.CountryCard {
+  box-shadow: 0 1px 2px -2px rgba(0, 0, 0, 0.16),
+    0 3px 6px 0 rgba(0, 0, 0, 0.12), 0 5px 12px 4px rgba(0, 0, 0, 0.09);
+}
+
+.itemDescription {
+  margin-left: 30px;
 }
