--- a/src/components/Countries/styles.scss
+++ b/src/components/Countries/styles.scss
@@ -1,14 +1,47 @@
+$primary-color: #26272b;
+$second-color: #96a2b2;
 
-.CountryDetailsContainer {
+.DetailsContainer {
   height: 80vh;
   background-color: white;
   display: flex;
   align-items: center;
+
+  &__row {
+    display: flex;
+    flex: 1;
+  }
+}
+
+.CountriesList {
+  margin-top: 20px;
 }
 
 .CountryCard {
   box-shadow: 0 1px 2px -2px rgba(0, 0, 0, 0.16),
     0 3px 6px 0 rgba(0, 0, 0, 0.12), 0 5px 12px 4px rgba(0, 0, 0, 0.09);
+
+  &__actions {
+    color: $second-color;
+
+    &:hover {
+      color: $primary-color;
+    }
+  }
+
+  &__items {
+    color: $primary-color;
+    margin-bottom: 8px;
+
+    &--info {
+      color: $second-color;
+    }
+
+    &--list {
+      margin-left: 35px;
+      list-style-type: square;
+    }
+  }
 }
 
 .itemDescription {
