--- a/src/countries.scss
+++ b/src/countries.scss
@@ -1,6 +1,7 @@
 $primary-color: #26272b;
 $second-color: #96a2b2;
 $background-color: #fff;
+$breakpoint-tablet: 768px;
 
 .container {
   background-color: $background-color;
